<!--
  ~ Copyright 2020 Jorge Ávila Estévez
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name" translatable="false">Buscaminas</string>
    <string name="generate">Generate</string>
    <string name="new_board">New Board</string>

    <string name="about">About</string>
    <string name="opening_link">Opening link…</string>

    <string name="number_of_cells">Number of cells by side (N x N)</string>
    <string name="number_of_bombs">Number of bombs</string>

    <string name="less_cells_button">Less Cells Button</string>
    <string name="more_cells_button">More Cells Button</string>

    <string name="less_bombs_button">Less Bombs Button</string>
    <string name="more_bombs_button">More Bombs Button</string>

    <string name="sorry_you_lose">Sorry! You Lose</string>
    <string name="share_lose">Share?</string>
    <string name="congrats_you_win">Congrats! You Win</string>
    <string name="share">Share</string>

    <string name="text_dialog">
        a board of &lt;big>%1$dx%1$d&lt;/big> cells,
        with &lt;big>%2$d&lt;/big> bombs, in &lt;big>%3$s&lt;/big> seconds.
    </string>
    <string name="text_dialog_win">You complete %1$s</string>
    <string name="text_dialog_lose">You found a bomb in %1$s</string>

    <string name="share_message_dialog_win">
        I complete %1$s
        &lt;br>&lt;br>Do you think you can beat me?
        &lt;br>bit.ly/playbuscaminas
    </string>
    <string name="share_message_dialog_lose">
        I found a bomb in %1$s
        &lt;br>&lt;br>Do you think you can do better?
        &lt;br>bit.ly/playbuscaminas
    </string>

    <string name="file_preference_name" translatable="false">file_preference_name</string>
    <string name="elapsed_time_preference_key" translatable="false">elapsed_time_preference_key</string>
    <string name="cells_side_preference_key" translatable="false">cells_side_preference_key</string>
    <string name="bombs_preference_key" translatable="false">bombs_preference_key</string>

    <string name="ddbb_content" translatable="false">DDBB content</string>


    <string name="dagger_title_link" translatable="false"><a
        href="https://dagger.dev/dev-guide/android.html">Dagger</a></string>
    <string name="roomexplorer_title_link" translatable="false"><a
        href="https://github.com/wajahatkarim3/RoomExplorer">RoomExplorer</a></string>
    <string name="icons_title_link" translatable="false"><a
        href="https://www.vecteezy.com">Icons from Vecteezy</a></string>
    <string name="eula_link" translatable="false"><a
        href="https://github.com/jorgeavilae/Buscaminas/blob/master/EULA.md">End-User License Agreement (EULA)</a></string>
    <string name="license_link" translatable="false"><a
        href="https://github.com/jorgeavilae/Buscaminas/blob/master/LICENSE">Code License</a></string>
    <string name="develop_text" translatable="false">Developed by
        <a href="https://www.linkedin.com/in/jorgeavilae/">Jorge Ávila</a> during Spain\'s
        lockdown <a href="https://twitter.com/hashtag/Quedatenecasa">#QuedateEnCasa</a></string>
    <string name="develop_github" translatable="false">You can read the full code on
        <a href="https://github.com/jorgeavilae/Buscaminas">Github</a>
    </string>
    <string name="develop_date" translatable="false">May 2020</string>

    <string name="about_this_app" translatable="false">About this app</string>
    <string name="about_external_resources" translatable="false">External resources</string>
    <string name="about_dagger_text" translatable="false">Dagger is a fully static, compile-time
        dependency injection framework for both Java and Android. It is an adaptation of an earlier
        version created by Square and now maintained by Google.</string>
    <string name="about_roomexplorer_text" translatable="false">A quick and easy database viewer and
        manager library for your Room databases. Built by Wajahat Karim and contributors</string>
    <string name="about_contracts" translatable="false">Contracts</string>
    <string name="no_board">No board</string>

</resources>
