<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.newboard.NewBoardFragment">

    <data>

        <variable
            name="viewModel"
            type="com.jorgeav.buscaminas.ui.newboard.NewBoardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cells_label"
            style="@style/NewBoardTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_cells"
            app:layout_constraintBottom_toTopOf="@+id/cells_quantity_text"
            app:layout_constraintEnd_toEndOf="@+id/more_cells_button"
            app:layout_constraintStart_toStartOf="@+id/less_cells_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageButton
            android:id="@+id/less_cells_button"
            style="@style/ImageButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/less_cells_button"
            android:onClick="@{() -> viewModel.onLessCellsClicked()}"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="@+id/cells_quantity_text"
            app:layout_constraintEnd_toStartOf="@+id/cells_quantity_text"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cells_quantity_text" />

        <TextView
            android:id="@+id/cells_quantity_text"
            style="@style/NewBoardTextNumbers"
            android:text="@{viewModel.cellsBySide.toString()}"
            app:layout_constraintBottom_toTopOf="@+id/bombs_label"
            app:layout_constraintEnd_toStartOf="@+id/more_cells_button"
            app:layout_constraintStart_toEndOf="@+id/less_cells_button"
            app:layout_constraintTop_toBottomOf="@+id/cells_label"
            tools:text="10" />

        <ImageButton
            android:id="@+id/more_cells_button"
            style="@style/ImageButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/more_cells_button"
            android:onClick="@{() -> viewModel.onMoreCellsClicked()}"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/cells_quantity_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cells_quantity_text"
            app:layout_constraintTop_toTopOf="@+id/cells_quantity_text" />

        <TextView
            android:id="@+id/bombs_label"
            style="@style/NewBoardTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_section"
            android:text="@string/number_of_bombs"
            app:layout_constraintBottom_toTopOf="@+id/bombs_quantity_text"
            app:layout_constraintEnd_toEndOf="@+id/more_bombs_button"
            app:layout_constraintStart_toStartOf="@+id/less_bombs_button"
            app:layout_constraintTop_toBottomOf="@+id/cells_quantity_text" />

        <ImageButton
            android:id="@+id/less_bombs_button"
            style="@style/ImageButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/less_bombs_button"
            android:onClick="@{() -> viewModel.onLessBombsClicked()}"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="@+id/bombs_quantity_text"
            app:layout_constraintEnd_toStartOf="@+id/bombs_quantity_text"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bombs_quantity_text" />

        <TextView
            android:id="@+id/bombs_quantity_text"
            style="@style/NewBoardTextNumbers"
            android:text="@{viewModel.bombs.toString()}"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/more_bombs_button"
            app:layout_constraintStart_toEndOf="@+id/less_bombs_button"
            app:layout_constraintTop_toBottomOf="@+id/bombs_label"
            tools:text="10" />

        <ImageButton
            android:id="@+id/more_bombs_button"
            style="@style/ImageButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/more_bombs_button"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/bombs_quantity_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bombs_quantity_text"
            app:layout_constraintTop_toTopOf="@+id/bombs_quantity_text" />

        <Button
            android:id="@+id/generate_button"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onGenerateBoardClicked()}"
            android:text="@string/generate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>